syntax = "proto3";

package proto;

service PrimeNumberGenerator {
  // stream responses from one request
  rpc generatePrimes (PrimeNumberRequest) returns (stream PrimeNumberReply) {}
}

message PrimeNumberRequest {
  uint32 limit = 1;
}

message PrimeNumberReply {
  uint32 primes = 1;
}